# llm-guardrails-proxy

./: Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: routes.py  schemas.py
app/core/: llama_guard.py  observability.py  output_moderator.py  pii_sanitizer.py  prompt_injection.py
tests/: test_enterprise_guardrails.py  test_guardrails.py
